<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UIDesign</string>
    <string name="action_settings">Settings</string>
    <string name="imageSubstituion">This Image File Cracked!</string>
    <string name="setting">설정</string>
    <string name="changeEmail">등록된 이메일 변경</string>
    <string name="changePassword">비밀번호 변경</string>
    <string name="support">도움말</string>
    <string name="useSiren">경고음 출력 사용</string>
    <string name="useGPS">위치 추적 사용</string>
    <string name="useFrontCamera">전면 카메라 사용</string>
    <string name="useLockScreen">휴대폰 잠금 사용</string>
    <string name="useCameraShot">잠금해제 실패시 전면 촬영</string>
    <string name="useContactBackup">주소록 백업 사용</string
>
</resources>